[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/ButtonStore.tscn" type="PackedScene" id=1]
[ext_resource path="res://Script/StoreMenu.gd" type="Script" id=2]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Home" parent="." instance=ExtResource( 1 )]
margin_left = 886.0
margin_top = 56.0
margin_right = 931.0
margin_bottom = 94.0

[node name="Books" parent="." instance=ExtResource( 1 )]
margin_left = 937.0
margin_top = 56.0
margin_right = 982.0
margin_bottom = 94.0

[node name="Vehicles" parent="." instance=ExtResource( 1 )]
margin_left = 989.0
margin_top = 55.0
margin_right = 1034.0
margin_bottom = 93.0

[node name="Shirts" parent="." instance=ExtResource( 1 )]
margin_left = 1041.0
margin_top = 55.0
margin_right = 1086.0
margin_bottom = 93.0

[node name="Pets" parent="." instance=ExtResource( 1 )]
margin_left = 1096.0
margin_top = 55.0
margin_right = 1141.0
margin_bottom = 93.0

[node name="Houses" parent="." instance=ExtResource( 1 )]
margin_left = 1145.0
margin_top = 56.0
margin_right = 1190.0
margin_bottom = 94.0

[node name="Exit" parent="." instance=ExtResource( 1 )]
margin_left = 1220.0
margin_top = 56.0
margin_right = 1265.0
margin_bottom = 94.0

[connection signal="pressed" from="Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Books" to="." method="_on_Books_pressed"]
[connection signal="pressed" from="Vehicles" to="." method="_on_Vehicles_pressed"]
[connection signal="pressed" from="Shirts" to="." method="_on_Shirts_pressed"]
[connection signal="pressed" from="Pets" to="." method="_on_Pets_pressed"]
[connection signal="pressed" from="Houses" to="." method="_on_Houses_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
